--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
 }
 
 body {
-    background-color: white;
+    background-image: url("Image result for friends coffee shop");
 }
 
 .siliconValley {
